Fix navbar in about.html
Navbar was too narrow due to accidental template inheritance

Fix misspelled title

Alter home page button

Update README.md

--- a/static/forestforlife/css/about.css
+++ b/static/forestforlife/css/about.css
@@ -1,4 +1,4 @@
-.container-fluid {
+.MeetTheTeam {
     padding-left: 20%;
     padding-right: 20%;
 }
